--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="numeric_one" translatable="false">1</string>
     <string name="numeric_two" translatable="false">2</string>
     <string name="numeric_three" translatable="false">3</string>
+    <string name="select_language_title" translatable="false">Pick language</string>
+    <string name="select_language_paragraph" translatable="false">You can change this later in settings.</string>
 </resources>
