--- a/app/src/staging/res/values/strings.xml
+++ b/app/src/staging/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="alert_title" translatable="false">Title</string>
     <string name="alert_message" translatable="false">Message</string>
 
-    <string name="facebook_app_id" translatable="false">295996994493099</string>
+    <string name="facebook_app_id" translatable="false">437830083826480</string>
+    <string name="fb_login_protocol_scheme" translatable="false">fb437830083826480</string>
 </resources>
