--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -12,5 +12,6 @@
 
     <string name="mock_personas_prompt" translatable="false">Mock Persona</string>
 
-    <string name="facebook_app_id" translatable="false">295996994493099</string>
+    <string name="facebook_app_id" translatable="false">437830083826480</string>
+    <string name="fb_login_protocol_scheme" translatable="false">fb437830083826480</string>
 </resources>
