--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="numeric_three" translatable="false">3</string>
     <string name="select_language_title" translatable="false">Pick language</string>
     <string name="select_language_paragraph" translatable="false">You can change this later in settings.</string>
+    <string name="happy_birthday">Happy Birthday</string>
+    <string name="from">From</string>
 </resources>
