--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="numeric_three" translatable="false">3</string>
     <string name="select_language_title" translatable="false">Pick language</string>
     <string name="select_language_paragraph" translatable="false">You can change this later in settings.</string>
-
+    <string name="select_country" translatable="false">Select your country of residence</string>
+    <string name="select_language_title_market" translatable="false">Select language</string>
+    <string name="select_language_paragraph_market" translatable="false">You can change this later in app.</string>
 </resources>
