--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="select_country" translatable="false">Select your country of residence</string>
     <string name="select_language_title_market" translatable="false">Select language</string>
     <string name="select_language_paragraph_market" translatable="false">You can change this later in app.</string>
+    <string name="continue_market" translatable="false">Continue</string>
+    <string name="sweden" translatable="false">Sverige</string>
+    <string name="swedish" translatable="false">Svenska</string>
+    <string name="norway" translatable="false">Norge</string>
+    <string name="norwegian" translatable="false">Norsk</string>
 </resources>
