--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="continue_market" translatable="false">Continue</string>
     <string name="sweden" translatable="false">Sverige</string>
     <string name="swedish" translatable="false">Svenska</string>
+    <string name="english_swedish" translatable="false">English</string>
     <string name="norway" translatable="false">Norge</string>
     <string name="norwegian" translatable="false">Norsk</string>
+    <string name="english_norwegian" translatable="false">English</string>
+    <string name="system_default" translatable="false">System default</string>
 </resources>
