--- a/app/src/pullrequest/res/values/strings.xml
+++ b/app/src/pullrequest/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="WS_GRAPHQL_URL" translatable="false">wss://graphql.dev.hedvigit.com/subscriptions</string>
     <string name="BASE_URL" translatable="false">https://graphql.dev.hedvigit.com</string>
     <string name="WEB_BASE_URL" translatable="false">https://www.dev.hedvigit.com</string>
+    <string name="HANALYTICS_URL" translatable="false">https://hanalytics-staging.herokuapp.com</string>
     <string name="file_provider_authority" translatable="false">com.hedvig.android.test.file.provider</string>
 </resources>
